tests/functional/lang/eval-fail/addDrvOutputDependencies-empty-context.err.exp
error:
       … while calling the 'addDrvOutputDependencies' builtin
         at /pwd/lang/eval-fail/addDrvOutputDependencies-empty-context.nix:1:1:
            1| builtins.addDrvOutputDependencies ""
             | ^
            2|

       error: context of string '' must have exactly one element, but has 0
